# qengine

./: .clang-format  .codedocs  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  nightly.yml
assets/: autoexec.cfg  config.cfg  default.cfg
assets/maps/: sample.bsp  sample.map  sample.prt
assets/pics/: anum_0.pcx  anum_1.pcx  anum_2.pcx  anum_3.pcx  anum_4.pcx  anum_5.pcx  anum_6.pcx  anum_7.pcx  anum_8.pcx  anum_9.pcx  anum_minus.pcx  conback.pcx  conchars.pcx  crosshair_1.pcx  crosshair_2.pcx  crosshair_3.pcx  icon_blaster.pcx  icon_bluekey.pcx  icon_bodyarmor.pcx  icon_bullets.pcx  icon_cells.pcx  icon_chaingun.pcx  icon_combatarmor.pcx  icon_glauncher.pcx  icon_grenades.pcx  icon_health.pcx  icon_hyperblaster.pcx  icon_jacketarmor.pcx  icon_machinegun.pcx  icon_railgun.pcx  icon_redkey.pcx  icon_rlauncher.pcx  icon_rockets.pcx  icon_shells.pcx  icon_shotgun.pcx  icon_slugs.pcx  icon_sshotgun.pcx  loading.pcx  m_banner_addressbook.pcx  m_banner_game.pcx  (+40 more)
assets/textures/eq2/: README.md  ceiling.wal  floor.wal  wall.wal
docs/: Doxyfile.in
src/client/: cl_console.c  cl_effects.c  cl_entities.c  cl_input.c  cl_inventory.c  cl_keyboard.c  cl_lights.c  cl_main.c  cl_network.c  cl_parse.c  cl_particles.c  cl_prediction.c  cl_screen.c  cl_tempentities.c  cl_view.c
src/client/header/: client.h  console.h  keyboard.h  ref.h  screen.h  vid.h
src/client/menu/: menu.c  qmenu.c  videomenu.c
src/client/menu/header/: qmenu.h
src/client/renderer/: ref_shared.h  sw_aclip.c  sw_alias.c  sw_bsp.c  sw_draw.c  sw_edge.c  sw_image.c  sw_light.c  sw_main.c  sw_misc.c  sw_model.c  sw_part.c  sw_poly.c  sw_polyse.c  sw_rast.c  sw_scan.c  sw_sprite.c  sw_surf.c
src/client/renderer/constants/: adivtab.h  anorms.h  anormtab.h  warpsin.h
src/client/renderer/files/: pcx.c  pvs.c  stb.c  wal.c
src/client/renderer/gl1/: gl1_draw.c  gl1_image.c  gl1_light.c  gl1_lightmap.c  gl1_main.c  gl1_md2.c  gl1_mesh.c  gl1_misc.c  gl1_model.c  gl1_scrap.c  gl1_sdl.c  gl1_sp2.c  gl1_surf.c  gl1_warp.c  qgl.c
src/client/renderer/gl1/header/: local.h  model.h  qgl.h
src/client/renderer/header/: local.h  model.h
src/client/sound/: sound.c  wave.c
src/client/sound/header/: local.h  sound.h
src/common/: argproc.c  clientserver.c  cmdparser.c  collision.c  crc.c  cvar.c  filesystem.c  frame.c  glob.c  md4.c  movemsg.c  netchan.c  pmove.c  szone.c  zone.c
src/common/header/: common.h  crc.h  files.h  glob.h  shared.h  zone.h
src/common/shared/: flash.c  rand.c  shared.c
src/game/: g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_main.c  g_misc.c  g_monster.c  g_phys.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_utils.c  g_weapon.c
src/game/header/: game.h
src/game/monster/infantry/: infantry.c  infantry.h
src/game/monster/misc/: move.c  player.h
src/game/monster/soldier/: soldier.c  soldier.h
src/game/player/: client.c  hud.c  trail.c  view.c  weapon.c
src/platform/: graphics.h  input.h  sound.h
src/platform/generic/: misc.c  vid.c
src/platform/sdl/: graphics.c  graphics_gl.c  input.c  sound.c
src/platform/unix/: main.c  memory.c  network.c  signalhandler.c  system.c
src/platform/unix/header/: unix.h
src/platform/windows/: icon.rc  memory.c  network.c  system.c
src/platform/windows/header/: resource.h  winquake.h
src/server/: sv_cmd.c  sv_conless.c  sv_entities.c  sv_game.c  sv_init.c  sv_main.c  sv_send.c  sv_user.c  sv_world.c
src/server/header/: server.h
src/tools/: CMakeLists.txt  README.txt
src/tools/16to8/: 16to8.c  CMakeLists.txt
src/tools/assetgen/: README.md  fontgen.py  uigen.py
src/tools/assetgen/fonts/int10h/: README
src/tools/assetgen/fonts/kenney/: README
src/tools/bspinfo/: CMakeLists.txt  bspinfo.c
src/tools/colormap/: CMakeLists.txt  colormap.c
src/tools/common/: bmplib.c  bmplib.h  bspfile.c  bspfile.h  cmdlib.c  cmdlib.h  l3dslib.c  l3dslib.h  lbmlib.c  lbmlib.h  mathlib.c  mathlib.h  mdfour.c  mdfour.h  polylib.c  polylib.h  qfiles.h  scriplib.c  scriplib.h  threads.c  threads.h  trilib.c  trilib.h  wadlib.c  wadlib.h
src/tools/pak/: Makefile  pak.cpp
src/tools/pcx2pal/: CMakeLists.txt  README  pcx2pal.c
src/tools/pcx2wal/: CMakeLists.txt  pcx2wal.c
src/tools/qbsp3/: CMakeLists.txt  brushbsp.c  csg.c  faces.c  glfile.c  leakfile.c  map.c  nodraw.c  portals.c  prtfile.c  qbsp.h  qbsp3.c  textures.c  tree.c  writebsp.c
src/tools/qdata/: CMakeLists.txt  anorms.h  images.c  models.c  qdata.c  qdata.h  sprites.c  tables.c  video.c
src/tools/qrad3/: CMakeLists.txt  lightmap.c  patches.c  qrad.h  qrad3.c  trace.c
src/tools/qvis3/: CMakeLists.txt  flow.c  qvis3.c  vis.h
